improve ipam plugin add/del, customize netconf struct
